Fixed issue with form sizing on firefox mobile. Updated look of mobile menu

--- a/styles/sass/_blog.scss
+++ b/styles/sass/_blog.scss
@@ -131,8 +131,6 @@ aside, .post, .commentForm, .inputSubContainer {
         }
 
         .commentForm {
-            flex-wrap: wrap;
-            position: relative;
             width: 95%;
 
 
