--- a/styles/sass/_contact.scss
+++ b/styles/sass/_contact.scss
@@ -58,7 +58,6 @@
         display: flex;
         flex-direction: column;
         padding: 50px;
-        position: relative;
         width: 65%;
 
         .btn {
